-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: hotspot
-
b15
-
x86
```
* For target hotspot_variant-zero_libjvm_objs_compileBroker.o:
/Users/fool/workspace/open/jdk/src/hotspot/share/compiler/compileBroker.cpp:1345:12: error: use of undeclared identifier 'UseSSE'; did you mean 'UseSHA'?
if ((UseSSE >= 1 &&
^~~~~~
UseSHA
/Users/fool/workspace/open/jdk/src/hotspot/share/runtime/globals.hpp:2518:1: note: 'UseSHA' declared here
ALL_FLAGS(DECLARE_DEVELOPER_FLAG, \
^
```
- It might be fixed by
```
diff -r faa4916a3379 src/hotspot/share/compiler/compileBroker.cpp
--- a/src/hotspot/share/compiler/compileBroker.cpp Sat Mar 07 23:08:33 2020 +0900
+++ b/src/hotspot/share/compiler/compileBroker.cpp Wed Mar 11 09:08:30 2020 +0800
@@ -1328,7 +1328,7 @@
// do the compilation
if (method->is_native()) {
if (!PreferInterpreterNativeStubs || method->is_method_handle_intrinsic()) {
-#ifdef X86
+#if defined(X86) && !defined(ZERO)
// The following native methods:
//
// java.lang.Float.intBitsToFloat
@@ -1350,7 +1350,7 @@
method->intrinsic_id() == vmIntrinsics::_doubleToRawLongBits))) {
return NULL;
}
-#endif // X86
+#endif // X86 && !ZERO
// To properly handle the appendix argument for out-of-line calls we are using a small trampoline that
// pops off the appendix argument and jumps to the target (see gen_special_dispatch in SharedRuntime).
```
* For target hotspot_variant-zero_libjvm_objs_compileBroker.o:
/Users/fool/workspace/open/jdk/src/hotspot/share/compiler/compileBroker.cpp:1345:12: error: use of undeclared identifier 'UseSSE'; did you mean 'UseSHA'?
if ((UseSSE >= 1 &&
^~~~~~
UseSHA
/Users/fool/workspace/open/jdk/src/hotspot/share/runtime/globals.hpp:2518:1: note: 'UseSHA' declared here
ALL_FLAGS(DECLARE_DEVELOPER_FLAG, \
^
```
- It might be fixed by
```
diff -r faa4916a3379 src/hotspot/share/compiler/compileBroker.cpp
--- a/src/hotspot/share/compiler/compileBroker.cpp Sat Mar 07 23:08:33 2020 +0900
+++ b/src/hotspot/share/compiler/compileBroker.cpp Wed Mar 11 09:08:30 2020 +0800
@@ -1328,7 +1328,7 @@
// do the compilation
if (method->is_native()) {
if (!PreferInterpreterNativeStubs || method->is_method_handle_intrinsic()) {
-#ifdef X86
+#if defined(X86) && !defined(ZERO)
// The following native methods:
//
// java.lang.Float.intBitsToFloat
@@ -1350,7 +1350,7 @@
method->intrinsic_id() == vmIntrinsics::_doubleToRawLongBits))) {
return NULL;
}
-#endif // X86
+#endif // X86 && !ZERO
// To properly handle the appendix argument for out-of-line calls we are using a small trampoline that
// pops off the appendix argument and jumps to the target (see gen_special_dispatch in SharedRuntime).
```
- relates to
-
JDK-8238681 Make -XX:UseSSE flag x86-specific
-
- Resolved
-