8240846: Zero VM is broken after JDK-8238681: UseSSE not defined

Reviewed-by: shade, rehn, vlivanov